03_deployment_changedetection.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: changedetection-io
  name: changedetection-io
  namespace: __NAMESPACE__
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: changedetection-io
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: changedetection-io
    spec:
      containers:
      - image: ghcr.io/dgtlmoon/changedetection.io:latest
        imagePullPolicy: IfNotPresent
        name: changedetection-io
        ports:
        - containerPort: 5000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /datastore
          name: changedetection-io
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: changedetection-io
        persistentVolumeClaim:
          claimName: changedetection-io
