04_deployment_sockpuppet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sockpuppet
  namespace: __NAMESPACE__
  labels:
    app: sockpuppet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sockpuppet
  template:
    metadata:
      labels:
        app: sockpuppet
    spec:
      containers:
      - name: sockpuppet
        image: docker.io/dgtlmoon/sockpuppetbrowser:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      resources:
        requests:
          memory: "512Mi"
        limits:
          memory: "2Gi"
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
