05_svc_changedetection.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: changedetection-io
  name: changedetection-io
  namespace: __NAMESPACE__
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 5000-tcp
    port: 5000
  selector:
    deployment: changedetection-io
