06_svc_sockpuppet.yml
apiVersion: v1
kind: Service
metadata:
  name: sockpuppet
  namespace: __NAMESPACE__

spec:
  selector:
    app: sockpuppet
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
