07_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-www
  namespace: __NAMESPACE__
spec:
  ingressClassName: traefik
  rules:
  - host: __FQDN__
    http:
      paths:
      - backend:
          service:
            name: changedetection-io
            port:
              number: 5000
        path: /
        pathType: Prefix
